--- a/charts/kubescape-operator/templates/kubescape/deployment.yaml
+++ b/charts/kubescape-operator/templates/kubescape/deployment.yaml
@@ -89,8 +89,8 @@ spec:
           value: "{{ .Values.logger.name }}"
         - name: KS_DOWNLOAD_ARTIFACTS  # When set to true the artifacts will be downloaded every scan execution
           value: "{{ .Values.kubescape.downloadArtifacts }}"
-        - name: RULE_PROCESSING_GOMAXPROCS
-          value: "{{ .Values.kubescape.ruleProcessingConcurrency }}"
+        - name: POLICIES_CACHE_TTL
+          value: "{{ .Values.kubescape.policiesCacheTtl }}"
         - name: KS_DEFAULT_CONFIGMAP_NAME
           value: "{{ .Values.kubescape.name }}-config"
         - name: KS_DEFAULT_CONFIGMAP_NAMESPACE
