--- a/charts/kubescape-operator/values.yaml
+++ b/charts/kubescape-operator/values.yaml
@@ -136,9 +136,9 @@ kubescape:
 
   image:
     # -- source code: https://github.com/kubescape/kubescape/tree/master/httphandler (public repo)
-    repository: quay.io/kubescape/kubescape
-    tag: v2.9.1
-    pullPolicy: IfNotPresent
+    repository: quay.io/matthiasb_1/kubescape
+    tag: master
+    pullPolicy: Always
 
   resources:
     requests:
@@ -198,9 +198,9 @@ operator:
 
   image:
     # -- source code: https://github.com/kubescape/operator
-    repository: quay.io/kubescape/operator
-    tag: v0.1.50
-    pullPolicy: IfNotPresent
+    repository: quay.io/matthiasb_1/operator
+    tag: main
+    pullPolicy: Always
 
   service:
     type: ClusterIP
