add config to enable continuous scanning
Signed-off-by: Matthias Bertschy <matthias.bertschy@gmail.com>

--- a/charts/kubescape-operator/templates/operator/configmap.yaml
+++ b/charts/kubescape-operator/templates/operator/configmap.yaml
@@ -11,4 +11,15 @@ data:
         "namespace": "{{ .Values.ksNamespace }}",
         "triggersecurityframework": "{{ .Values.operator.triggerSecurityFramework }}"
     }
+  matchingRules.json: |
+    {
+    	"match": [
+    		{
+    			"apiGroups": ["apps"],
+    			"apiVersions": ["v1"],
+    			"resources": ["deployments"]
+    		}
+    	],
+    	"namespaces": ["kube-system", "default"]
+    }
 {{- end }}
