--- a/charts/kubescape-operator/templates/operator/deployment.yaml
+++ b/charts/kubescape-operator/templates/operator/deployment.yaml
@@ -121,6 +121,10 @@ spec:
               mountPath: /etc/config/config.json
               readOnly: true
               subPath: "config.json"
+            - name: config
+              mountPath: /etc/config/matchingRules.json
+              readOnly: true
+              subPath: "matchingRules.json"
 {{- if .Values.volumeMounts }}
 {{ toYaml .Values.volumeMounts | indent 12 }}
 {{- end }}
@@ -162,6 +166,8 @@ spec:
             items:
             - key: "config.json"
               path: "config.json"
+            - key: "matchingRules.json"
+              path: "matchingRules.json"
 {{- if .Values.volumes }}
 {{ toYaml .Values.volumes | indent 8 }}
 {{- end }}
