--- a/.github/workflows/02-e2e-test.yaml
+++ b/.github/workflows/02-e2e-test.yaml
@@ -82,7 +82,12 @@ jobs:
               ks_microservice_on_demand, 
               ks_microservice_mitre_framework_on_demand, 
               ks_microservice_nsa_and_mitre_framework_demand, 
-              scan_compliance_score
+              scan_compliance_score,
+              network_policy,
+              network_policy_data_appended,
+              network_policy_pod_restarted,
+              network_policy_multiple_replicas,
+              network_policy_known_servers
             ]
               
     runs-on: ubuntu-latest
