--- a/charts/kubescape-operator/values.yaml
+++ b/charts/kubescape-operator/values.yaml
@@ -555,8 +555,8 @@ storage:
 
   replicaCount: 1
   image:
-    repository: quay.io/kubescape/storage
-    tag: v0.0.44
+    repository: danielgrunberger/storage
+    tag: v71
     pullPolicy: IfNotPresent
 
 
